/*
 * $Id: ChangeLog,v 1.1570 2003/10/09 05:31:53 paultucker Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/


2003-10-10 07:35 GMT+1200 Peter Rees <peter@rees.co.nz>
  * Note: Changes only affect Win32
  * /rtl/set.c
    removed "WIN:" printing setup
    Support for Windows SET PRINTER TO (cPrinterName) added

  * /rtl/tprinter.c
    remove all THarbourPrinter_() functions and associated statics
    PRINTEREXISTS() & hb_PrinterExists() added

  * /rtl/tprint.c
    file is now redundant - can be deleted

  * /rtl/console.c
    remove code related to "WIN:" printing

  * TODO: Support SET PRINTER TO CON ?????
  *       add SET( _SET_PRINTERJOB,,) to set "Document Name" in spooler ????

2003-10-09 01:20 UTC-0500 Paul Tucker <ptucker@sympatico.ca>
  * contrib/libnf/makefile.vc
    * output is libnf.lib
  + contrib/libnf/makefile.bc
  + contrib/libnf/make_b32.bat
  + contrib/libnf/make_vc.bat
  * contrib/libnf/dispc.c
    * casts as required
    * corrected a logic error (&& 512)
    * resolved if( somlog == YES ) to just if (somelog)
  * contrib/libnf/easter.prg
    * removed __setCentury()
    * simplified return value.
  * makallvc.bat
  * makallbc.bat
    + libnf
  * makefile.vc
  * makefile.nt
  * contrib/htmllib/makefile.vc
  * contrib/internet/makefile.vc
  * contrib/libct/makefile.vc
  * contrib/libmisc/makefile.vc
  * contrib/libnf/makefile.vc
  * contrib/tip/makefile.vc
  * contrib/what32/makefile.nt
  * contrib/what32/makefile.vc
  * contrib/whoo/makefile.nt
  * contrib/whoo/makefile.vc
  * contrib/woopgui/makefile.nt
  * contrib/woopgui/makefile.vc
  * contrib/xwt/makefile.nt
  * contrib/xwt/makefile.vc
    * obj to prg dependance improved.

2003-10-09 10:59 GMT+1200 Peter Rees <peter@rees.co.nz>
  * /doc/en/print.txt
  * /tests/testwprn.prg
    Altered to reflect changes in GETPRINTERS() & PRINTFILERAW()
