@@ -1,5 +1,5 @@
 #
-# $Id: hrbdll.bc,v 1.27 2003/10/01 05:56:28 ronpinkas Exp $
+# $Id: hrbdll.bc,v 1.28 2003/10/01 13:32:28 paultucker Exp $
 #
 #
 # This make file is for creating harbour.dll with Borland C++ 5.5.1
@@ -381,7 +381,6 @@ HARBOUR_DLL_OBJS = \
   $(OBJ_DIR)\dbgwa.obj \
   $(OBJ_DIR)\maindllh.obj \
   $(OBJ_DIR)\hvm.obj \
-  $(OBJ_DIR)\tprint.obj \
   $(OBJ_DIR)\tprinter.obj \
   $(OBJ_DIR)\fastitem.obj \
   $(OBJ_DIR)\macroslx.obj \
@@ -760,7 +759,6 @@ $(HARBOUR_DLL)  : \
   echo. $(OBJ_DIR)\tbrwtext.obj          + >> hdll.tmp
   echo. $(OBJ_DIR)\dbgwa.obj             + >> hdll.tmp
   echo. $(OBJ_DIR)\maindllh.obj          + >> hdll.tmp
-  echo. $(OBJ_DIR)\tprint.obj            + >> hdll.tmp
   echo. $(OBJ_DIR)\tprinter.obj          + >> hdll.tmp
   echo. $(OBJ_DIR)\win32ole.obj          + >> hdll.tmp
   echo. $(OBJ_DIR)\hvm.obj               + >> hdll.tmp
@@ -1979,9 +1977,6 @@ $(OBJ_DIR)\gtwin.obj : $(RTL_DIR)\gtwin\gtwin.c
    $(CC) $(CLIBFLAGS) -o$@ $**
 
 $(OBJ_DIR)\mousewin.obj : $(RTL_DIR)\gtwin\mousewin.c
-   $(CC) $(CLIBFLAGS) -o$@ $**
-
-$(OBJ_DIR)\tprint.obj : $(RTL_DIR)\tprint.c
    $(CC) $(CLIBFLAGS) -o$@ $**
 
 $(OBJ_DIR)\tprinter.obj : $(RTL_DIR)\tprinter.c
