@@ -1,5 +1,5 @@
 #
-# $Id: makefile.vc,v 1.70 2003/09/25 02:02:31 paultucker Exp $
+# $Id: makefile.vc,v 1.71 2003/10/09 05:31:53 paultucker Exp $
 #
 
 #
@@ -411,7 +411,6 @@ RTL_LIB_OBJS = \
    $(OBJ_DIR)$(MT)\substr.obj \
    $(OBJ_DIR)$(MT)\teditorl.obj \
    $(OBJ_DIR)$(MT)\tone.obj \
-   $(OBJ_DIR)$(MT)\tprint.obj \
    $(OBJ_DIR)$(MT)\tprinter.obj \
    $(OBJ_DIR)$(MT)\trace.obj \
    $(OBJ_DIR)$(MT)\transfrm.obj \
